force-app/main/default/objects/Product2/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>現状機種コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>