force-app/main/default/objects/Product2/fields/ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductNumber__c</fullName>
    <displayFormat>PN-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>機種コード</label>
    <type>AutoNumber</type>
</CustomField>