force-app/main/default/objects/Product2/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>