force-app/main/default/objects/Product2/fields/UsageEndDateYear__c.field-meta.xml
<CustomField>
    <fullName>UsageEndDateYear__c</fullName>
    <label>全体更新時期（年数）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>