force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ProductNumber__c</columns>
    <columns>SBU__c</columns>
    <columns>UniqueKey__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>ProductCode__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>UsageEndDateYear__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductNumber__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>すべての製品</label>
</ListView>