force-app/main/default/objects/Product2/listViews/X004.listView-meta.xml
<ListView>
    <fullName>X004</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBU__c</columns>
    <columns>ProductNumber__c</columns>
    <columns>ProductCode__c</columns>
    <columns>UsageEndDateYear__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>contains</operation>
        <value>建設防災</value>
    </filters>
    <label>04.建設防災</label>
</ListView>