force-app/main/default/objects/Product2/listViews/X10.listView-meta.xml
<ListView>
    <fullName>X10</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBU__c</columns>
    <columns>ProductNumber__c</columns>
    <columns>ProductCode__c</columns>
    <columns>UsageEndDateYear__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>contains</operation>
        <value>受変電</value>
    </filters>
    <label>10.受変電</label>
</ListView>