force-app/main/default/objects/Product2/listViews/X13.listView-meta.xml
<ListView>
    <fullName>X13</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBU__c</columns>
    <columns>ProductNumber__c</columns>
    <columns>ProductCode__c</columns>
    <columns>UsageEndDateYear__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>contains</operation>
        <value>ビルシ</value>
    </filters>
    <label>13.ビルシステム</label>
</ListView>