force-app/main/default/objects/Product2/listViews/X14.listView-meta.xml
<ListView>
    <fullName>X14</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBU__c</columns>
    <columns>ProductNumber__c</columns>
    <columns>ProductCode__c</columns>
    <columns>UsageEndDateYear__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>contains</operation>
        <value>映像</value>
    </filters>
    <label>14.映像</label>
</ListView>