force-app/main/default/objects/Product2/listViews/X16.listView-meta.xml
<ListView>
    <fullName>X16</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ProductNumber__c</columns>
    <columns>SBU__c</columns>
    <columns>ProductCode__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>contains</operation>
        <value>その他</value>
    </filters>
    <label>16.その他</label>
</ListView>